@@ -47,6 +47,9 @@ Bug Fixes:
 - Fixed bug in EntityFind.searchFormInputs using ec.web.parameters instead
   of context; parameters are added to the context and other things may be
   too before this is called, so best to just use the context
+- Changed data stored on login to be done in separate transactions so that
+  the records aren't locked for the full surrounding tx preventing the
+  same user from auth for other transactions
 
 ===========================================================================
 Release 1.3.2 - 20 Nov 2013
